// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotButton should render correctly 1`] = `
<div>
  <button
    class="dot-button"
  >
    <span>
      test-text
    </span>
  </button>
</div>
`;

exports[`DotButton should render correctly with additional classname 1`] = `
<div>
  <button
    class="dot-button test-classname"
  >
    <span>
      test-text
    </span>
  </button>
</div>
`;
